<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/concertImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/performer"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/concertImage"
            android:padding="8dp"
            android:text="@string/performer"
            android:textColor="?android:textColorSecondary"
            android:gravity="center" />

        <TextView
            android:id="@+id/location"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/performer"
            android:padding="8dp"
            android:text="@string/location"
            android:gravity="center" />

        <TextView
            android:id="@+id/date"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location"
            android:padding="8dp"
            android:text="@string/date"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/quantity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/quantity"
                android:gravity="center" />

            <NumberPicker
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/ratedInfo"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity_layout"
            android:padding="8dp"
            android:isIndicator="true"
            android:gravity="center" />

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_ticket_s"
            android:layout_below="@id/ratedInfo"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>